yaml_files/backend-deployment.yaml
# # backend-deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: backend
#   namespace: my-namespace
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: backend
#   template:
#     metadata:
#       labels:
#         app: backend
#     spec:
#       containers:
#       - name: backend
#         image: your-backend-image:latest
#         envFrom:
#         - configMapRef:
#             name: backend-config
#         ports:
#         - containerPort: 8080
#         resources:
#           requests:
#             memory: "256Mi"
#             cpu: "500m"
#           limits:
#             memory: "512Mi"
#             cpu: "1"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: bashlogs/backendapp:1.1
          ports:
            - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
