yaml_files/all.yaml
---
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test1


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: test1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: bashlogs/backendapp:1.1
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: test1
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: test1
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: backend.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
