yaml_files/ingress-controller.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: my-namespace
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /username/app1
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /username/app2
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      - path: /username/app3
        pathType: Prefix
        backend:
          service:
            name: another-service  # Add this for Webpage 3
            port:
              number: 8080
